<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vu.mc160400799.mycareerassistant.CompanyProfileFragment">

    <EditText
        android:id="@+id/oName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/company_name"
        android:inputType="textMultiLine|textPersonName" />

    <Spinner
        android:id="@+id/industry"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:entries="@array/Industry" />

    <Spinner
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:entries="@array/City" />

    <EditText
        android:id="@+id/cAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/phoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_no"
        android:inputType="phone" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn"
        android:text="Update Profile" />

</LinearLayout>
